Implémentation des components Weapons, Wepons Detail and Weapons Editor

--- a/src/app/components/hero-detail/hero-detail.component.html
+++ b/src/app/components/hero-detail/hero-detail.component.html
@@ -7,5 +7,5 @@
   <div><span>damage: </span>{{ hero.damage }}</div>
   <div><span>hp: </span>{{ hero.hp }}</div>
   <button type="button" (click)="goBack()">Go back</button>
-  <button type="button" routerLink="/edit/{{hero.id}}">Edit</button>
+  <button type="button" routerLink="/heroes/edit/{{hero.id}}">Edit</button>
 </div>
