--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   <a routerLink="/heroes">Heroes</a>
   <a routerLink="/weapons">Weapons</a>
   <a routerLink="/dashboard">Dashboard</a>
+  <a routerLink="/custom">Custom</a>
 </nav>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
