--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -1,7 +1,11 @@
 <ul class="heroes">
+  <h2>Heroes List</h2>
   <li *ngFor="let hero of heroes">
     <a routerLink="/heroes/detail/{{hero.id}}">
-      <span class="badge">{{hero.id}}</span> {{hero.name}}
+      {{ hero.name }}
     </a>
   </li>
 </ul>
+<div class="add-hero-container">
+  <a class="add-hero-btn" routerLink="/heroes/add">+ Add Hero</a>
+</div>
