--- a/src/app/components/hero-editor/hero-editor.component.html
+++ b/src/app/components/hero-editor/hero-editor.component.html
@@ -1,3 +1,4 @@
+<script src="hero-editor.component.ts"></script>
 <div class="hero-editor" *ngIf="hero">
   <h2>{{ hero.name | uppercase }} Editor</h2>
 
