--- a/src/app/components/hero-detail/hero-detail.component.html
+++ b/src/app/components/hero-detail/hero-detail.component.html
@@ -8,6 +8,7 @@
     <div><span class="label">Dodge: </span><span>{{ hero.dodge }}</span></div>
     <div><span class="label">Damage: </span><span>{{ hero.damage }}</span></div>
     <div><span class="label">HP: </span><span>{{ hero.hp }}</span></div>
+    <div><span class="label">Favorite: </span><span>{{ hero.isFavorite }}</span></div>
   </div>
 
   <div class="hero-actions">
