--- a/src/app/components/weapon-detail/weapon-detail.component.html
+++ b/src/app/components/weapon-detail/weapon-detail.component.html
@@ -8,6 +8,7 @@
     <div><span class="label">Dodge: </span><span>{{ weapon.dodge }}</span></div>
     <div><span class="label">Damage: </span><span>{{ weapon.damage }}</span></div>
     <div><span class="label">HP: </span><span>{{ weapon.hp }}</span></div>
+    <div><span class="label">Favorite: </span><span>{{ weapon.isFavorite }}</span></div>
   </div>
 
   <div class="weapon-actions">
