--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -19,7 +19,7 @@ h2 {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center; /* Centre les éléments */
   align-content: flex-start;
   align-items: flex-start;
 }
@@ -35,7 +35,7 @@ a {
   text-align: center;
   width: 100%;
   min-width: 70px;
-  margin: .5rem auto;
+  margin: .5rem 10px;
   box-sizing: border-box;
 
   /* flexbox */
