avant changement de heroService

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
   <a routerLink="/weapons">Weapons</a>
   <a routerLink="/dashboard">Dashboard</a>
   <a routerLink="/custom">Custom</a>
+  <a routerLink="/profil">Profil</a>
 </nav>
 <router-outlet></router-outlet>
