--- a/src/app/components/hero-detail/hero-detail.component.html
+++ b/src/app/components/hero-detail/hero-detail.component.html
@@ -9,6 +9,7 @@
     <div><span class="label">Damage: </span><span>{{ hero.damage }}</span></div>
     <div><span class="label">HP: </span><span>{{ hero.hp }}</span></div>
     <div><span class="label">Favorite: </span><span>{{ hero.isFavorite }}</span></div>
+    <div *ngIf="hero.weapon"><span class="label">Weapon: </span><a routerLink="/weapons/detail/{{hero.weapon}}">{{ weaponName }}</a></div>
   </div>
 
   <div class="hero-actions">
