--- a/src/app/components/hero-editor/hero-editor.component.html
+++ b/src/app/components/hero-editor/hero-editor.component.html
@@ -1,4 +1,9 @@
-<script src="hero-editor.component.ts"></script>
+<div *ngIf="showPopUpValid">
+  <app-pop-up [title]="'Success !'"  [message]="'Your hero was update with success'" (close)="hidePopUp()"></app-pop-up>
+</div>
+<div *ngIf="showPopUpWrong">
+  <app-pop-up [title]="'Problem !'"  [message]="'Your hero can no be update'" (close)="hidePopUp(false)"></app-pop-up>
+</div>
 <div class="hero-editor" *ngIf="hero">
   <h2>{{ hero.name | uppercase }} Editor</h2>
 
