--- a/src/app/components/pop-up/pop-up.component.css
+++ b/src/app/components/pop-up/pop-up.component.css
@@ -17,9 +17,13 @@
   background-color: white;
   padding: 2rem;
   border-radius: 8px;
-  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2);
-  max-width: 400px;
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+  width: 400px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 button {
