--- a/src/app/components/pop-up/pop-up.component.html
+++ b/src/app/components/pop-up/pop-up.component.html
@@ -1,5 +1,6 @@
 <div class="pop-up-overlay" (click)="closePopUp()">
   <div class="pop-up-container" (click)="$event.stopPropagation()">
+    <h1>{{title}}</h1>
     <p>{{ message }}</p>
     <button (click)="closePopUp()">Fermer</button>
   </div>
