--- a/src/app/components/weapon-editor/weapon-editor.component.html
+++ b/src/app/components/weapon-editor/weapon-editor.component.html
@@ -1,3 +1,9 @@
+<div *ngIf="showPopUpValid">
+  <app-pop-up [title]="'Success !'"  [message]="'Your hero was update with success'" (close)="hidePopUp()"></app-pop-up>
+</div>
+<div *ngIf="showPopUpWrong">
+  <app-pop-up [title]="'Problem !'"  [message]="'Your hero can no be update'" (close)="hidePopUp(false)"></app-pop-up>
+</div>
 <div class="weapon-editor" *ngIf="weapon">
   <h2>{{weapon.name | uppercase}} Edits</h2>
 
