--- a/src/app/components/profil/profil.component.html
+++ b/src/app/components/profil/profil.component.html
@@ -1,6 +1,8 @@
-<div>
-  <div *ngFor="let hero of heroes">
-    <span>{{hero.name}}</span>
-  </div>
-</div>
+<ul class="profils">
+  <h2>attack/dodge/damage/hp</h2>
+  <li *ngFor="let profil of profils">
+    <span>{{profil.hero.name | uppercase}} & {{profil.weapon.name | uppercase}} : {{profil.hero.attack + profil.weapon.attack}} / {{profil.hero.dodge + profil.weapon.dodge}} / {{profil.hero.damage + profil.weapon.damage}} / {{profil.hero.hp + profil.weapon.hp}}</span>
+  </li>
+</ul>
+
 
