--- a/src/app/components/weapon-add/weapon-add.component.html
+++ b/src/app/components/weapon-add/weapon-add.component.html
@@ -25,6 +25,6 @@
       <label>Remaining Points:</label>
       <span class="remaining-points">{{ weapon.remainingPoints() }}</span>
     </div>
-    <button type="submit" class="btn-add">Add Hero</button>
+    <button type="submit" class="btn-add">Add Weapon</button>
   </form>
 </div>
