--- a/src/app/components/hero-add/hero-add.component.html
+++ b/src/app/components/hero-add/hero-add.component.html
@@ -3,7 +3,7 @@
   <form (ngSubmit)="add()" class="hero-form">
     <div class="form-group">
       <label for="name">Nom du Héros :</label>
-      <input id="name" [(ngModel)]="hero.name" name="name" placeholder="Jordan Bardella" required>
+      <input id="name" [(ngModel)]="hero.name" name="name" placeholder="Ulysse" required>
     </div>
     <div class="form-group">
       <label for="attack">Attaque :</label>
